# fastapi_web

./: .env.example  .gitignore  .replit  Dockerfile  README.md  README_WeComBot.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  main.py
app/api/: agent_categories.py  agents.py  auth.py  chat.py  config.py  departments.py  menus.py  roles.py  users.py  wecom.py
app/core/: deps.py  exceptions.py  guard.py  security.py  storage.py
app/middleware/: logging.py
app/models/: __init__.py  agent.py  agent_category.py  chat.py  department.py  menu.py  user.py
app/schemas/: __init__.py  agent.py  agent_category.py  chat.py  department.py  menu.py  response.py  role.py  token.py  user.py
app/services/: dify.py  file_storage.py  oa_sso.py
app/utils/: __init__.py  captcha.py  ierror.py  logger.py  sm2_utils.py  validators.py  wecom_crypto.py  wecom_message.py
docs/: agent_category_implementation_plan.md  user_role_api_update.md  wecom_bot_setup.md
k8s/: configmap.yaml  deployment.yaml  pvc.yaml
