[project]
name = "fastapi-ai-chat-backend"
version = "0.1.0"
description = "A backend system built with FastAPI providing user management, RBAC, and AI chat functionality."
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.8.1",
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "gmssl",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "slowapi",
    "sqlalchemy>=2.0.40",
    "sse-starlette>=2.3.3",
    "uvicorn>=0.34.2",
]